[gd_scene load_steps=12 format=2]

[ext_resource path="res://Traps/Crate.gd" type="Script" id=1]
[ext_resource path="res://Traps/Stone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Blocks.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 49.3478, 39.6667 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 111.5, 33.5 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=7]
radius = 109.018

[node name="Crate" type="Node2D"]
script = ExtResource( 1 )

[node name="Stone" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 33, -102.5 )
scale = Vector2( 0.575, 0.5625 )
texture = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Sprite"]
position = Vector2( 34.7826, 22.2222 )
scale = Vector2( 0.586957, 0.461111 )
texture = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( 1.73904, 16.9662 )
rotation = 1.5708
scale = Vector2( 0.586957, 0.461111 )
texture = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 8.04348, 0.333359 )
shape = SubResource( 3 )

[node name="Trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2( 43.5, -115.5 )
shape = SubResource( 4 )

[node name="Explosion" type="Particles2D" parent="."]
position = Vector2( 36, -83 )
scale = Vector2( 0.3, 0.3 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="Fire" type="Particles2D" parent="."]
position = Vector2( 37, -87 )
scale = Vector2( 0.3, 0.3 )
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
process_material = SubResource( 6 )
texture = ExtResource( 4 )

[node name="DeathZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 39, -86 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_entered" from="DeathZone" to="." method="_on_DeathZone_body_entered"]
